@startuml

title __FRAGMENT's Class Diagram__\n

  namespace com.training.petstore {
    namespace view.fragment {
      class com.training.petstore.view.fragment.DealWithReversalFragment {
          - arbitrationList : List<Arbitration>
          - noItemText : TextView
          - noItemView : View
          - progressDialog : ProgressDialog
          - recyclerView : RecyclerView
          - swipeRefreshLayout : SwipeRefreshLayout
          + DealWithReversalFragment()
          + dealWithArbitration()
          + getArbitration()
          + initView()
          {static} + newInstance()
          + onCreate()
          + onCreateView()
          + refreshArbitration()
          + showArbitration()
          - show()
      }
    }
  }
  

  namespace com.training.petstore {
    namespace view.fragment {
      class com.training.petstore.view.fragment.DealWithReversalFragment.MyHandler {
          + MyHandler()
          + handleMessage()
      }
    }
  }
  

  namespace com.training.petstore {
    namespace view.fragment {
      class com.training.petstore.view.fragment.ManageUserFragment {
          ~ action : String
          ~ imagePath : String
          ~ mSelected : List<Uri>
          ~ photo : CircleImageView
          ~ pickiT : PickiT
          - ACTION_MODIFY : String
          - ACTION_REGISTER : String
          - REQUEST_CODE_PICK_IMAGE : int
          - asset : TextInputEditText
          - dialog : Dialog
          - isAdminSwitch : Switch
          - nickName : TextInputEditText
          - password : TextInputEditText
          - progressDialog : ProgressDialog
          - userId : TextInputEditText
          + ManageUserFragment()
          + PickiTonCompleteListener()
          + PickiTonProgressUpdate()
          + PickiTonStartListener()
          + PickiTonUriReturned()
          + delete()
          + getPhotoUrl()
          + initView()
          + modify()
          {static} + newInstance()
          + onActivityResult()
          + onCreate()
          + onCreateView()
          + register()
          + showFullScreenDialog()
          + showWrapContentDialog()
          - onFail()
          - onSuccess()
          - onUploadImageFailed()
          - onUploadImageSucceeded()
          - registerOrModifyUser()
      }
    }
  }
  

  namespace com.training.petstore {
    namespace view.fragment {
      class com.training.petstore.view.fragment.ManageUserFragment.MyHandler {
          + MyHandler()
          + handleMessage()
      }
    }
  }
  

  com.training.petstore.view.fragment.DealWithReversalFragment -up-|> androidx.fragment.app.Fragment
  com.training.petstore.view.fragment.DealWithReversalFragment o-- com.training.petstore.view.fragment.DealWithReversalFragment.MyHandler : myHandler
  com.training.petstore.view.fragment.DealWithReversalFragment o-- com.training.petstore.view.adapter.ArbitrationAdapter : arbitrationAdapter
  com.training.petstore.view.fragment.DealWithReversalFragment +-down- com.training.petstore.view.fragment.DealWithReversalFragment.MyHandler
  com.training.petstore.view.fragment.DealWithReversalFragment.MyHandler -up-|> android.os.Handler
  com.training.petstore.view.fragment.DealWithReversalFragment.MyHandler o-- com.training.petstore.view.fragment.DealWithReversalFragment : dealWithReversalFragment
  com.training.petstore.view.fragment.ManageUserFragment .up.|> com.hbisoft.pickit.PickiTCallbacks
  com.training.petstore.view.fragment.ManageUserFragment -up-|> androidx.fragment.app.Fragment
  com.training.petstore.view.fragment.ManageUserFragment o-- com.training.petstore.view.fragment.ManageUserFragment.MyHandler : myHandler
  com.training.petstore.view.fragment.ManageUserFragment +-down- com.training.petstore.view.fragment.ManageUserFragment.MyHandler
  com.training.petstore.view.fragment.ManageUserFragment.MyHandler -up-|> android.os.Handler
  com.training.petstore.view.fragment.ManageUserFragment.MyHandler o-- com.training.petstore.view.fragment.ManageUserFragment : manageUserFragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
